--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -53,9 +53,20 @@
                 </div>
                 <div class="header__container-nav__border"></div>
                 <ul class="header__container-nav__list">
-                    <!--TODO: add active -->
-                    <li class="header__container-nav__list-item "><a class="header__container-nav__list-item__link" href="/">Main</a></li>
-                    <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a></li>
+                    {{$activeClass := ""}}
+                    {{ if eq "/" .RelPermalink }}
+                    {{ $activeClass = "active" }}
+                    {{ end }}
+                    <li class="header__container-nav__list-item  {{$activeClass}}">
+                        <a class="header__container-nav__list-item__link" href="/">Main</a>
+                    </li>
+                    {{$activeClass := ""}}
+                    {{ if "/docs" | strings.HasPrefix .RelPermalink }}
+                    {{ $activeClass = "active" }}
+                    {{ end }}
+                    <li class="header__container-nav__list-item  {{$activeClass}}">
+                        <a class="header__container-nav__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a>
+                    </li>
                     <li class="header__container-nav__list-item"><a class="header__container-nav__list-item__link" href="https://github.com/p2pcloud/website" target="_blank">Github</a></li>
                 </ul>
                 <div class="header__container-nav__btn">
