--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>{{ if not .IsHome }}{{ .Title | title }} | {{ end }}{{ .Site.Title }}</title>
-    <link rel="canonical" href="{{ .Site.BaseURL }}">
+    <link rel="canonical" href="{{ .Permalink }}" />
     <link rel='alternate' type='application/rss+xml' title="{{ .Site.Title }} RSS" href='/index.xml'>
 
     {{ $sass := resources.Get "scss/_index.scss" }}
